# PESCy

./: Cmaxmin.py  README.md  __init__.py  calcC.py  calcCH.py  calcCofH.py  calcH.py  calcPESCcurves.py  calcS.py  setup.cfg  setup.py
PESCy/: PESCy_functions.py  __init__.py  calcCofH.py  calcH_fromPatternCount.py  calcS_fromPatternCount.py  constructPatternCount.py  timeseries.py
notebooks/: PESCy_tutorial.ipynb
notebooks/.ipynb_checkpoints/: PESCy_tutorial-checkpoint.ipynb
