[metadata]
name = PESCy
author = David Schaffner
maintainer = David Schaffner
maintainer_email = dschaffner@brynmawr.edu
description = A toolkit for running the Permutation Entropy and Statistical Complexity AnalYsis (PESCy) technique
long_description = file: README.md
#long_description_content_type = text/markdown
#license = 3-clause BSD
#license_file = LICENSES/LICENSE.txt
url = https://github.com/dschaffner/PESCy
#download_url = https://pypi.org/project/bapsflib/
project_urls =
    #BMPL = https://www.brynmawr.edu/physics/plasma
    #Documentation = https://bapsflib.readthedocs.io/en/latest/
    GitHub = https://github.com/dschaffner/PESCy
keywords = physics, plasma, plasma physics, science, chaos, permutation, entropy, statistical, complexity, PESCy
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    #License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
zip_safe = false
packages = find:
include_package_data = True
setup_requires =
    # PEP-518 encourages the use of pyproject.toml for defining
    # build dependencies...they should be defined under build-system.requires
install_requires =
    # ought to mirror requirements/install.txt
    #astropy >= 3.1
    h5py >= 2.6
    numpy >= 1.14
    scipy >= 0.19
    setuptools >= 41.2
    setuptools_scm
    matplotlib

[options.extras_require]
extras =
    # ought to mirror requirements/extras.txt
    # for developers
tests =
    # ought to mirror requirements/tests.txt
    #%(extras)s
    #codecov >= 2.0.15
    #coverage >= 4.5.1
docs =
    # ought to mirror requirements/docs.txt
    #%(extras)s
    #sphinx <= 2.4.4
    #sphinx-automodapi
    #sphinx-gallery
    #sphinx_rtd_theme
developer =
    # install everything for developers
    #%(docs)s
    #%(extras)s
    #%(tests)s
